# librime-quickjs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  action-install.sh
.github/workflows/: ci.yml
build-shared-check/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cmake/: FindQuickJS.cmake  QuickJS.cmake
include/: quickjspp.hpp
sample/: rime.js
sample/js/: date.js  number.js  time.js
sample/js/utils/: chinese-number.js
src/: gear_base.cc  quickjs_fiilter.h  quickjs_filter.cc  quickjs_module.cc  quickjs_processor.cc  quickjs_processor.h  quickjs_registry.h  quickjs_segmentor.cc  quickjs_segmentor.h  quickjs_translation.cc  quickjs_translation.h  quickjs_translator.cc  quickjs_translator.h  todo_processor.h
src/extend/: datetime.hpp  opencc.cc  opencc.hpp
src/gear/: gear_base.cc  gear_base.h  quickjs_fiilter.h  quickjs_filter.cc  quickjs_processor.cc  quickjs_processor.h  quickjs_segmentor.cc  quickjs_segmentor.h  quickjs_translation.cc  quickjs_translation.h  quickjs_translator.cc  quickjs_translator.h
src/lib/: overload.hpp  qjs_traits.hpp  quickjs.cc  quickjs.hpp  quickjspp.hpp
src/registry/: algebra.cc  candidate.cc  candidate.hpp  commit_history.cc  composition.cc  config.cc  config.hpp  connection.cc  context.cc  datetime.cc  datetime.hpp  engine.cc  engine.hpp  key_event.cc  keyevent.hpp  menu.cc  opencc.cc  opencc.hpp  qjs_registry.cc  qjs_registry.h  schema.cc  schema.hpp  segment.hpp  segmentation.cc  segmentation.hpp  signal.h  translation.cc  translation.hpp
